--- a/basket.html
+++ b/basket.html
@@ -23,7 +23,7 @@
                 <span class="basket__count">0</span>
             </div>
         </a>
-        <a class="home" href="/">
+        <a class="home" href="https://rruslan97.github.io/tages.github.io/">
             <svg width="45" height="45" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M7.98 1.984l7 6h-2.003v6H9.96V10.97H5.997v3.016H2.982v-6H.979l7-6z" fill="#000"></path>
             </svg>
